--- a/css/estilo.css
+++ b/css/estilo.css
@@ -21,7 +21,7 @@ main{
     /* justify-content: center; */
     /* align-items: center; */
     /* width: 100%; */
-    margin: 20px 0;
+    margin: 20px;
     background-color: #fff;
     padding: 5px 0px;
     border-radius: 10px;
@@ -59,7 +59,7 @@ h1{
     width: 50%;
     min-width: 290px;
     height: 30px;
-    margin: 15px 6.5px;
+    margin: 5px 6.5px 20px 6.5px;
     color: #000;
     font-size: 1rem;
 }
@@ -93,7 +93,7 @@ h1{
     align-items: center;
 }
 .box-expensas-list{
-    width: 90%;
+    width: 95%;
     display: flex;
     justify-content: space-around;
     align-items: center;
